Remove some hardcoded strings

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!--TODO-->
     <string name="app_name">Liquid Wars OS</string>
-    <string name="change_bluetooth_name">Change bluetooth name:</string>
+    <string name="play">Play</string>
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
+    <string name="share">Share</string>
+    <string name="find">Find</string>
+    <string name="ready">Ready</string>
     <string name="done">Done</string>
     <string name="cancel">Cancel</string>
     <string name="searching">Searching&#8230;</string>
+    <string name="enable_bluetooth_first">Enable bluetooth first</string>
 </resources>
